Fixed spacing between calendar and text

--- a/public/css/single_page.css
+++ b/public/css/single_page.css
@@ -3,3 +3,11 @@ main {
 	padding-left:30px;
 	padding-right: 30px;
 }
+
+.section{
+	padding-top: 0px;
+}
+
+#engineering-calendar p{
+	margin-bottom: 0px;
+}
